new keys/adjustables added

--- a/dplfusionfix_userconfig.ini
+++ b/dplfusionfix_userconfig.ini
@@ -8,6 +8,7 @@ Background_Glow_In_ShaderVer_1=True
 [Game]
 Allow_Missions_Debug_Text=False
 Dev_Menu_On=False
+Load_Frontend_Dev_Menu=False
 Instances_Spawn_Radius=210.000000
 [Misc]
 Show_Console_Output=False
@@ -15,6 +16,7 @@ Windowed_Mode=False
 Pause_Game_In_Windowed_Mode=False
 Invert_Garage_Camera=False
 Classic_BurnOut=False
+HeapFree_Validation_Fix=True
 [New_Visual]
 Minimap_Driver3_Goons=True
 [New_Feature]
